--- a/functions/getContent.html
+++ b/functions/getContent.html
@@ -217,9 +217,9 @@
             <p class="link">
                 <i class="fa fa-github github-icon"></i>
             </p>
-            <h6>Check out the code on GitHub: <a href="https://github.com/Wal33D/gdrive-serverless-asset-uploader"
-                    target="_blank">https://github.com/Wal33D/gdrive-serverless-asset-uploader</a></h6>
-            <h6> Made with ❤️ by Waleed Judah</h6>
+            <h6>Check out the code on GitHub: <a href=" https://github.com/Zxlbni"
+                    target="_blank"></a></h6>
+            <h6> Made with ❤️ by Labani Behera </h6>
             <h6 id="storageClusterName">Loading...</h6>
         </footer>
     </div>
